# C-learning

./: .gitignore  CMakeLists.txt  README.md
include/: BattleHelper.h  BattleSystem.h  Skill.h  player.h  team.h
src/: BattleHelper.cpp  BattleSystem.cpp  Player.cpp  Skill.cpp  main.cpp  team.cpp
